drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  namespace: drone
  name: drone
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    name: drone
