drone/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/secure-backends: "false"
    ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  rules:
  - host: drone.p.cns.me
    http:
      paths:
      - backend:
          serviceName: drone
          servicePort: 80
